version 0.7.0
 * iterator API implementation including binding for C and python
 * removing the 128MB limit for value size
 * small-copy data retrieval using sge+recvmsg to avoid data copies
 * directory API implementation fix
 * namespace handling in backend by passing handle through BE-API
 * request coalescing for better pipelining and reduced amount of syscalls

version 0.6.1
 * data adapters implementation allows dyn loaded lib to manipulate data or requests on the way in/out
 * cluster/server info to enable replica handling
 * improved sender side handling of commands (using sge+sendmsg to avoid copying user data buffers)

version 0.6.0
 * python binding upgrade for cffi compatibility with python3
 * python API simplified and less C-style
 * python support for  binary data and numpy arrays

version 0.5.99
 * environment variable DBR_PORT dropped, using DBR_SERVER as URL including protocol, host, port, etc
 * detach/delete reference counting and deletion properly implemented
 * implementation of dbrRemove()
 * implementation of dbrMove()
 * extended API with scatter/gather support

version 0.5.1
 * directory command introduced (initial version only, count argument has no effect yet)
 * automated multi-backend build enabled
 * fix tag handling bug
 * memleak review/fixes
 * more flexible backend build process
 * fix python build
 * added initial gitignore and code-owners

version 0.5.0
 * opensourced under Apache License 2.0

version 0.4.2
 * return DBR_ERR_NOCONNECT if a backend server fails
 * fixed MacOS build
 * documentation update

version 0.4.1
 * new API to test for existence of a key
 * extended read/get API with flags
 * python API provides extended error description function
 * python updated dbr and cffi modules import

version 0.4.0
 * Tags use their own typedef, apps should not rely on internal representation
 * Errorcodes revised and extended; dbrGetError provides brief explanation
 * dbrTest and dbrCancel API changed: only tag required